--- a/Report.ipynb
+++ b/Report.ipynb
@@ -87,13 +87,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fef6f1e0c9854ccbb2ab0e1242da05d7",
+       "model_id": "cb1af20767874947bdc89dde8753f478",
        "version_major": 2,
        "version_minor": 0
       },
@@ -103,37 +103,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[35;21m2022-11-16 09:15:40,983 \u001b[0m\u001b[30;1m[ERROR]: \u001b[0m\u001b[31;21min mu32.log (core_ws.py:719): Stop running due to exception: MuException:  [Listening command failed. Server 10.3.141.1:8002 said:  Connexion refused: Too many connections].\u001b[0m\n",
-      "Exception in thread Thread-8:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/media/huss/CE6698AB66989635/Users/tendl/Desktop/M2/Son/TP/TP/mu32/core_ws.py\", line 607, in listen_loop\n",
-      "    raise MuException( f\"Listening command failed. Server {self._server_address}:{self._server_port} said:  {response['error']}: {response['message']}\" )\n",
-      "mu32.exception.MuException: MuException:  [Listening command failed. Server 10.3.141.1:8002 said:  Connexion refused: Too many connections]\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/usr/lib/python3.8/threading.py\", line 932, in _bootstrap_inner\n",
-      "    self.run()\n",
-      "  File \"/usr/lib/python3.8/threading.py\", line 870, in run\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"/media/huss/CE6698AB66989635/Users/tendl/Desktop/M2/Son/TP/TP/mu32/core_ws.py\", line 515, in transfer_listenloop_thread\n",
-      "    asyncio.run( self.listen_loop() )\n",
-      "  File \"/usr/lib/python3.8/asyncio/runners.py\", line 44, in run\n",
-      "    return loop.run_until_complete(main)\n",
-      "  File \"/usr/lib/python3.8/asyncio/base_events.py\", line 616, in run_until_complete\n",
-      "    return future.result()\n",
-      "  File \"/media/huss/CE6698AB66989635/Users/tendl/Desktop/M2/Son/TP/TP/mu32/core_ws.py\", line 725, in listen_loop\n",
-      "    self.h5_close()\n",
-      "  File \"/media/huss/CE6698AB66989635/Users/tendl/Desktop/M2/Son/TP/TP/mu32/core_base.py\", line 1918, in h5_close\n",
-      "    self._h5_current_file.close()\n",
-      "AttributeError: 'NoneType' object has no attribute 'close'\n"
-     ]
     }
    ],
    "source": [
@@ -142,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +141,67 @@
     "def display_wave_forms(h5file):\n",
     "    t = ...\n",
     "    x = ...\n",
-    "    \n"
+    "\n",
+    "    plt.plot(t,x, laebl = \"t\", title='signal en fonction du temps')\n",
+    "    plt.xlabel=\"t (s)\"\n",
+    "    plt.ylabel=\"x\"\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "008336cddfd04949ac9cdbe1cf138ef7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HBox(children=(FileChooser(path='/media/huss/CE6698AB66989635/Users/tendl/Desktop/M2/Son/TP/TP'…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "m = antenne = array(\"play\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'array' object has no attribute 'mu32'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_8636/2062054994.py\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mantenne\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/media/huss/CE6698AB66989635/Users/tendl/Desktop/M2/Son/TP/TP/client.py\u001b[0m in \u001b[0;36mread\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    438\u001b[0m             \u001b[0;31m# Read last buffer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    439\u001b[0m             \u001b[0;31m#self.m = self.mu32.signal_q.get(block=True, timeout=2) * self.mu32.sensibility\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 440\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmu32\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msignal_q\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_nowait\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmu32\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msensibility\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    441\u001b[0m             \u001b[0;31m# Return array\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    442\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'array' object has no attribute 'mu32'"
+     ]
+    }
+   ],
+   "source": [
+    "m = antenne.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mat"
    ]
   }
  ],
