Ajout des fichiers h5

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -138,26 +138,26 @@
     }
    ],
    "source": [
-    "def display_wave_forms(h5file):\n",
-    "    t = ...\n",
-    "    x = ...\n",
+    "def display_wave_forms(m):\n",
     "\n",
-    "    plt.plot(t,x, laebl = \"t\", title='signal en fonction du temps')\n",
+    "    for len(m):\n",
+    "\n",
+    "        plt.plot(t,x, laebl = \"t\", title='signal en fonction du temps')\n",
+    "\n",
+    "\n",
     "    plt.xlabel=\"t (s)\"\n",
-    "    plt.ylabel=\"x\"\n",
-    "\n",
-    "\n"
+    "    plt.ylabel=\"x\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "008336cddfd04949ac9cdbe1cf138ef7",
+       "model_id": "29c715cfd7ed4420a98516f30a4a2d16",
        "version_major": 2,
        "version_minor": 0
       },
@@ -167,6 +167,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'/media/huss/CE6698AB66989635/Users/tendl/Desktop/M2/Son/TP/TP/100hz.h5': {'analogs': array([], dtype=float64), 'analogs_number': 0, 'channels_number': 8, 'comment': '', 'compression': False, 'counter': False, 'counter_skip': False, 'dataset_duration': 1, 'dataset_length': 20000, 'dataset_number': 6, 'datatype': 'int32', 'date': '2022-11-16 09:33:12.886347', 'duration': 6, 'mems': array([16, 17, 18, 19, 20, 21, 22, 23]), 'mems_number': 8, 'sampling_frequency': 20000.0, 'timestamp': 1668587592.886347}}\n"
+     ]
     }
    ],
    "source": [
@@ -175,33 +182,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'array' object has no attribute 'mu32'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_8636/2062054994.py\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mantenne\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/media/huss/CE6698AB66989635/Users/tendl/Desktop/M2/Son/TP/TP/client.py\u001b[0m in \u001b[0;36mread\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    438\u001b[0m             \u001b[0;31m# Read last buffer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    439\u001b[0m             \u001b[0;31m#self.m = self.mu32.signal_q.get(block=True, timeout=2) * self.mu32.sensibility\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 440\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmu32\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msignal_q\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_nowait\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmu32\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msensibility\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    441\u001b[0m             \u001b[0;31m# Return array\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    442\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'array' object has no attribute 'mu32'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "m = antenne.read()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mat"
+    "np.save(\"matrices/100hz\", m)"
    ]
   }
  ],
