Modificatiion dans le rapport plus ajout de utils.py

--- a/Test.ipynb
+++ b/Test.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "dca40716",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "3a07bd41",
    "metadata": {
     "scrolled": false
@@ -43,7 +43,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ad4efd6b821a4cfb8b63f4a49fa3cf7d",
+       "model_id": "7b7a37b684f44e62920dde3ac78b4c9d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -58,7 +58,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'/media/huss/CE6698AB66989635/Users/tendl/Desktop/M2/Son/TP/TP/experiment1.h5': {'analogs': array([], dtype=float64), 'analogs_number': 0, 'channels_number': 8, 'comment': '', 'compression': False, 'counter': True, 'counter_skip': True, 'dataset_duration': 1, 'dataset_length': 10000, 'dataset_number': 28, 'datatype': 'int32', 'date': '2022-07-19 14:16:58.236264', 'duration': 28, 'mems': array([0, 1, 2, 3, 4, 5, 6, 7]), 'mems_number': 8, 'sampling_frequency': 10000.0, 'timestamp': 1658233018.236264}}\n"
+      "{'/media/huss/CE6698AB66989635/Users/tendl/Desktop/M2/Son/TP/TP/50cm_lateral/100.h5': {'analogs': array([], dtype=float64), 'analogs_number': 0, 'channels_number': 8, 'comment': '', 'compression': False, 'counter': False, 'counter_skip': False, 'dataset_duration': 1, 'dataset_length': 20000, 'dataset_number': 2, 'datatype': 'int32', 'date': '2022-11-16 11:45:42.921823', 'duration': 2, 'mems': array([16, 17, 18, 19, 20, 21, 22, 23]), 'mems_number': 8, 'sampling_frequency': 20000.0, 'timestamp': 1668595542.921823}}\n"
      ]
     }
    ],
